# JobPilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  JOBPILOT_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  start.py
.sisyphus/: boulder.json
alembic/: env.py
backend/: config.py  database.py  defaults.py  logging_config.py  main.py
docs/: api-overview.md  api-reference.md  architecture.md  code-review.md  custom-templates.md  file-map.md  frontend-file-map.md  index.md  operations.md  user-guide.md  verification-gap-analysis.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
scripts/: backup_db.py  download_tectonic.py  install.ps1  install.sh  migrate_legacy_applied.py
tests/: conftest.py  factories.py  test_adzuna_client.py  test_anthropic_client.py  test_api_jobs.py  test_api_routes.py  test_application_result.py  test_applications_export.py  test_apply_engine.py  test_apply_http.py  test_apply_state.py  test_batch_runner.py  test_batch_runner_cv_fallback.py  test_browser_llm_wiring.py  test_compile_test_endpoint.py  test_config.py  test_config_scraper_headless.py  test_correspondence_api.py  test_cv_applicator.py  test_cv_modifier.py  test_cv_parser.py  test_daily_limit.py  test_db_integrity.py  test_deduplicator.py  test_defaults.py  test_documents_letter_regenerate.py  test_embedder.py  test_embedding_wiring.py  test_error_handling.py  test_factory_wiring.py  test_fit_engine.py  test_fit_integration.py  test_fit_models.py  (+59 more)
(+289 files in other folders)
