[project]
name = "jobpilot"
version = "0.1.0"
description = "AI-powered job application assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "browser-use>=0.2",
    "google-generativeai>=0.8",
    "texsoup>=0.3",
"httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "alembic>=1.13",
    "scrapling[fetchers]>=0.4",
    "markdownify>=0.14",
]

[project.scripts]
jobpilot = "start:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:launch_testing -p no:launch_ros -p no:ament_flake8 -p no:ament_lint -p no:ament_copyright -p no:ament_pep257 -p no:ament_xmllint"
norecursedirs = [".venv", "node_modules", "__pycache__", ".git", "frontend"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
